# irukakun_othello

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Display.h  OthelloGame.h
include/platform/: Console.h
src/: CMakeLists.txt  Console.cpp  Display.cpp  Main.cpp  OthelloGame.cpp
